--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -7,9 +7,11 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "sequelize": "^5.21.10"
