--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,14 +8,19 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
+    "bootstrap": "^4.5.0",
+    "formik": "^2.1.4",
     "material-ui": "^0.20.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-icons": "^3.10.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
